--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: <p>Saravanan Ponmudi</p>
+logo: /assets/img/Photo.jpg
+description: Techno Functional Manager interest in AI implementations.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
